--- a/frontend/src/scss/_theme.scss
+++ b/frontend/src/scss/_theme.scss
@@ -4,4 +4,7 @@
   --playlist-color: #aeb0b2;
   --spinner-highlight-color: #f50d0d;
   --tree-count-color: #7b7b7e;
+  --tree-hover-background-color: #004db4;
+  --tree-hover-color: white;
+  --tree-expander-hover-color: white;
 }
