tree style changed, fixed linter config

--- a/frontend/src/app/app.scss
+++ b/frontend/src/app/app.scss
@@ -11,6 +11,6 @@
     font-weight: bold;
     color: var(--app-header-color);
     text-align:center;
-    padding: 10px;
+    padding-top: 10px;
   }
 }
