--- a/frontend/src/component/source-selector/source-selector.scss
+++ b/frontend/src/component/source-selector/source-selector.scss
@@ -12,7 +12,7 @@
     }
 
     .MuiOutlinedInput-notchedOutline {
-      border-color: var(--playlist-color);
+      border-color: var(--border-color);
     }
 
     .MuiInputBase-input {
