--- a/frontend/src/component/playlist-viewer/playlist-viewer.scss
+++ b/frontend/src/component/playlist-viewer/playlist-viewer.scss
@@ -6,6 +6,11 @@
   padding: 10px;
   color: var(--playlist-color);
 
+  border: 1px solid var(--border-color);
+  border-radius: 4px;
+  margin-left: 10px;
+  margin-right: 10px;
+
   .group-label {
     display: flex;
     flex-flow: row nowrap;
