--- a/frontend/src/component/progress/progress.scss
+++ b/frontend/src/component/progress/progress.scss
@@ -15,7 +15,7 @@
   display: inline-block;
   position: relative;
   width: 80px;
-  height: 60px;
+  height: 40px;
 }
 
 .spinner div {
@@ -28,9 +28,9 @@
   min-height: 16px;
   max-height: 16px;
   border-radius: 50%;
-  background: #fff;
+  background: var(--spinner-color);
   opacity: 0.4;
-  animation: spinner 2s infinite alternate;
+  animation: spinner 1s infinite alternate;
 }
 
 .spinner div:nth-child(1) {
@@ -40,12 +40,12 @@
 
 .spinner div:nth-child(2) {
   left: 32px;
-  animation-delay: -0.5s;
+  animation-delay: -0.3s;
 }
 
 .spinner div:nth-child(3) {
   left: 56px;
-  animation-delay: -1s;
+  animation-delay: -0.6s;
 }
 
 @keyframes spinner {
@@ -54,6 +54,6 @@
     background-color: var(--spinner-highlight-color);
   }
   100% {
-    transform: translateY(40px);
+    transform: translateY(20px);
   }
 }
