--- a/frontend/src/scss/_theme.scss
+++ b/frontend/src/scss/_theme.scss
@@ -2,6 +2,8 @@
   --background-color: #2b2b2b;
   --app-header-color: #6495b1;
   --playlist-color: #aeb0b2;
+  --border-color: #aeb0b2;
+  --spinner-color: #ffffff66;
   --spinner-highlight-color: #f50d0d;
   --tree-count-color: #7b7b7e;
   --tree-hover-background-color: #004db4;
