--- a/frontend/src/scss/_theme.scss
+++ b/frontend/src/scss/_theme.scss
@@ -9,4 +9,8 @@
   --tree-hover-background-color: #004db4;
   --tree-hover-color: white;
   --tree-expander-hover-color: white;
+  --tool-button-background-color: #434343;
+  --tool-button-color: #8f8f8f;
+  --tool-button-hover-color: #ffffff;
+  --tool-button-hover-background-color: #0c8a13;
 }
