updated frontend libraries, search now possible, only supports plain text search

--- a/frontend/src/scss/_theme.scss
+++ b/frontend/src/scss/_theme.scss
@@ -4,7 +4,7 @@
   --playlist-color: #aeb0b2;
   --border-color: #aeb0b2;
   --spinner-color: #ffffff66;
-  --spinner-highlight-color: #f50d0d;
+  --spinner-highlight-color: #5599f0;
   --tree-count-color: #7b7b7e;
   --tree-hover-background-color: #004db4;
   --tree-hover-color: white;
