WebUI: Added clipboard collector on left side

--- a/frontend/src/app/app.scss
+++ b/frontend/src/app/app.scss
@@ -13,4 +13,22 @@
     text-align:center;
     padding-top: 10px;
   }
+
+  .app-main {
+    display: flex;
+    flex-flow: row;
+    justify-content: center;
+    flex-grow: 1;
+    overflow: hidden;
+    height: 100%;
+
+    .app-content {
+      display: flex;
+      flex-flow: column;
+      justify-content: center;
+      flex-grow: 1;
+      overflow: hidden;
+      height: 100%;
+    }
+  }
 }
