--- a/frontend/src/scss/_theme.scss
+++ b/frontend/src/scss/_theme.scss
@@ -1,6 +1,9 @@
 :root {
+  --text-color: #ffffff;
   --background-color: #2b2b2b;
   --app-header-color: #6495b1;
+  --sidebar-toggle-color: #ffffff;
+  --sidebar-toggle-hover-color: #004db4;
   --playlist-color: #aeb0b2;
   --border-color: #aeb0b2;
   --spinner-color: #ffffff66;
@@ -13,4 +16,8 @@
   --tool-button-color: #8f8f8f;
   --tool-button-hover-color: #ffffff;
   --tool-button-hover-background-color: #0c8a13;
+
+  --toolbar-background-color: #434343;
+  --toolbar-button-hover-color: #ffffff;
+  --toolbar-button-hover-background-color: #004db4;
 }
