--- a/frontend/src/component/sidebar/sidebar.scss
+++ b/frontend/src/component/sidebar/sidebar.scss
@@ -3,32 +3,28 @@ $toggle-size: 24px;
 
 .sidebar {
   display: flex;
-  flex-flow: row;
+  flex-flow: column;
   justify-content: center;
-  flex-shrink: 1;
+  flex: 1 1 auto;
   overflow: hidden;
-  height: 100%;
 
   .sidebar-content {
     display: flex;
     flex-flow: column;
     justify-content: center;
-    flex-grow: 1;
+    flex: 1 1 auto;
     overflow: hidden;
-    height: 100%;
   }
   .sidebar-collapsed {
-    max-width: 0;
-    width: 0;
+    max-height: 0;
+    height: 0;
     overflow: hidden;
   }
 
   .sidebar-toggle {
     display: flex;
     align-items: center;
-    max-width: $toggle-size;
-    min-width: $toggle-size;
-    width: $toggle-size;
+    justify-content: center;
     color: var(--sidebar-toggle-color);
     cursor: pointer;
 
