--- a/frontend/src/component/playlist-viewer/playlist-viewer.scss
+++ b/frontend/src/component/playlist-viewer/playlist-viewer.scss
@@ -1,6 +1,5 @@
 .playlist-viewer {
-  flex-grow: 1;
-  flex-shrink: 1;
+  flex: 1 1 auto;
   overflow: hidden;
   overflow-y: auto;
   padding: 10px;
