--- a/frontend/src/scss/_theme.scss
+++ b/frontend/src/scss/_theme.scss
@@ -7,6 +7,7 @@
   --sidebar-toggle-hover-color: #004db4;
   --playlist-color: #aeb0b2;
   --border-color: #aeb0b2;
+  --border-light-color: #68686c;
   --hover-border-color: #ffffff;
   --spinner-color: #ffffff66;
   --spinner-highlight-color: #5599f0;
