--- a/frontend/src/component/toolbar/toolbar.scss
+++ b/frontend/src/component/toolbar/toolbar.scss
@@ -1,3 +1,5 @@
+@use '../../scss/common';
+
 .toolbar {
   display: flex;
   flex-grow: 0;
@@ -5,11 +7,6 @@
   padding: 6px;
 
   button {
-    background-color: #0081fa;
-    color: var(--text-color);
-    border: 1px solid var(--border-color);
-    font-size: 1.2rem;
-    border-radius: 4px;
-    padding: 4px 12px;
+    @include common.textButton();
   }
 }
