--- a/frontend/src/component/playlist-viewer/playlist-viewer.scss
+++ b/frontend/src/component/playlist-viewer/playlist-viewer.scss
@@ -6,7 +6,7 @@
   color: var(--playlist-color);
 
   border: 1px solid var(--border-color);
-  border-radius: 4px;
+  border-radius: var(--border-radius);
   margin-left: 10px;
   margin-right: 10px;
 
