--- a/frontend/src/scss/_theme.scss
+++ b/frontend/src/scss/_theme.scss
@@ -31,4 +31,14 @@
   --popup-hover-background-color: #5599f0;
   --popup-hover-color: #fff;
 
+  --attention-color: red;
+
+  --card-background-color: #363636;
+  --card-color: #ffffff;
+  --card-border-color: #606060;
+
+  --title-label-color: #6495b1;
+
+  --border-radius: 4px;
+
 }
