--- a/frontend/src/component/clipboard-viewer/clipboard-viewer.scss
+++ b/frontend/src/component/clipboard-viewer/clipboard-viewer.scss
@@ -1,4 +1,5 @@
-@import '../../scss/theme';
+@use '../../scss/theme';
+@use '../../scss/common';
 
 $viewer-height: 200px;
 
@@ -18,7 +19,7 @@ $viewer-height: 200px;
     .toolbar-btn {
       cursor: pointer;
       border: 1px solid var(--border-color);
-      border-radius: 4px;
+      border-radius: var(--border-radius);
       background-color: transparent;
       color: var(--toolbar-button-hover-color);
       margin-right: 8px;
@@ -36,11 +37,7 @@ $viewer-height: 200px;
     white-space: nowrap;
     padding: 8px;
 
-    ul {
-        list-style-type: none; /* Remove bullets */
-        padding: 0; /* Remove padding */
-        margin: 0; /* Remove margins */
-    }
+    @include common.list();
 
   }
 }
