api_proxy.yaml save over web-ui, adding new user to existing targets. WebUi Preferences

--- a/frontend/src/component/checkbox/checkbox.scss
+++ b/frontend/src/component/checkbox/checkbox.scss
@@ -24,6 +24,7 @@ $checkbox-size:18px;
     height: $checkbox-size;
     width:  $checkbox-size;
     background-color: #eee;
+    border-radius: var(--border-radius);
 
     &:after {
       content: "";
