ServerInfo web ui editor started

--- a/frontend/src/component/target-update/target-update.scss
+++ b/frontend/src/component/target-update/target-update.scss
@@ -1,33 +1,15 @@
 @use '../../scss/common';
+@use '../../scss/preferences';
+
 .target-update {
-  display: flex;
-  flex-flow: column;
+  @include preferences.prefsRoot();
   flex: 1 1 auto;
   overflow: hidden;
-  gap: 12px;
 
   @include common.list();
 
 
-  &__toolbar {
-    display: flex;
-    flex-flow: row wrap;
-    flex: 0 1 auto;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-
-    label {
-      flex: 1 1 auto;
-      font-size: 2rem;
-      font-weight: bold;
-      color: var(--title-label-color);
-    }
-
-    button {
-      @include common.textButton();
-    }
-  }
+  @include preferences.prefsToolbar();
 
   &__content {
     overflow: auto;
