--- a/frontend/src/component/preferences/preferences.scss
+++ b/frontend/src/component/preferences/preferences.scss
@@ -1,7 +1,7 @@
 .preferences {
   display: flex;
   flex-flow: row;
-  flex: 1 1 auto;
+  //flex: 1 1 auto;
   padding: 12px;
   overflow: hidden;
   gap: 18px;
@@ -10,6 +10,7 @@
     flex-flow: row wrap;
     overflow: auto;
   }
+
 
   //.user {
   //  max-height: 90%;
