--- a/frontend/src/component/user-view/user-view.scss
+++ b/frontend/src/component/user-view/user-view.scss
@@ -1,32 +1,9 @@
 @use '../../scss/common';
+@use '../../scss/preferences';
 
 .user {
-  display: flex;
-  flex-flow: column;
-  gap: 20px;
-  align-content: flex-start;
-  justify-content: center;
-  flex-shrink: 0;
-
-  &__toolbar {
-    display: flex;
-    flex-flow: row wrap;
-    flex: 0 1 auto;
-    justify-content: center;
-    align-items: center;
-    gap: 12px;
-
-    label {
-      flex: 1 1 auto;
-      font-size: 2rem;
-      font-weight: bold;
-      color: var(--title-label-color);
-    }
-
-    button {
-      @include common.textButton();
-    }
-  }
+  @include preferences.prefsRoot();
+  @include preferences.prefsToolbar();
 
   &__content {
     display: flex;
@@ -101,6 +78,16 @@
       &-col {
         display: table-cell;
         width: auto;
+
+        &-toolbar {
+          display: flex;
+          flex-flow: row;
+          align-items: flex-end;
+          span {
+            padding: 4px;
+            @include common.iconButton();
+          }
+        }
       }
 
       &-col-label {
@@ -138,17 +125,6 @@
     }
   }
 
-  input {
-    color: var(--text-color);
-    background-color: transparent;
-    padding: 0.2rem 0.5rem;
-    flex: 1 1 auto;
-    border: 1px solid var(--border-color);
-
-    &:focus,
-    &:hover {
-      outline: none;
-    }
-  }
+  @include preferences.prefsInput;
 }
 
