--- a/frontend/src/scss/_default.scss
+++ b/frontend/src/scss/_default.scss
@@ -1,52 +1,11 @@
 @use './common';
 
-.input-field {
-  display: flex;
-  position: relative;
-  flex-flow: row nowrap;
-  border: 1px solid var(--border-color);
-  border-radius: var(--border-radius);
-  flex: 1 1 auto;
-  padding: 2px;
-
-  &:focus-within {
-    border: 1px solid var(--hover-border-color);
-  }
-
-  label {
-    position: absolute;
-    color: var(--label-color);
-    transform: translate(6px, -0.8rem);
-    background-color: var(--background-color);
-    padding: 0 2px;
-  }
-
-  input {
-    color: var(--text-color);
-    background-color: transparent;
-    font-size: 1.2rem;
-    padding: 0.5rem;
-    border: none;
-    flex: 1 1 auto;
-
-    &:focus,
-    &:hover {
-      border: none;
-      outline: none;
-    }
-  }
-
-  button {
-    @include common.iconButton();
-  }
-}
-
 .app {
   /* ===== Scrollbar CSS ===== */
   /* Firefox */
   * {
     scrollbar-width: auto;
-    scrollbar-color: #0081fa #ffffff;
+    scrollbar-color: var(--scrollbar-color);
   }
 
   /* Chrome, Edge, and Safari */
@@ -59,8 +18,8 @@
   }
 
   *::-webkit-scrollbar-thumb {
-    background-color: #0081fa;
-    border-radius: 10px;
+    background-color: var(--scrollbar-thumb-background-color);
+    border-radius: 0;
     border: none;
   }
 }
@@ -88,6 +47,8 @@ button {
   filter: drop-shadow(3px 3px 4px var(--popup-shadow-color));
   min-width: 200px;
 
+  border-top-left-radius:var(--border-radius);
+
 }
 
 .vert-group {
@@ -95,4 +56,45 @@ button {
   flex-flow: column;
   gap: 20px;
   overflow: hidden;
+  padding: 0 4px 4px 0;
+}
+
+.tabset {
+  display: flex;
+  flex-flow: row;
+  gap: 2px;
+  background-color: var(--tabset-background-color);
+  border-bottom: 1px solid var(--tabset-border-color);
+  &__tab {
+    cursor: pointer;
+    user-select: none;
+    box-sizing: border-box;
+    background-color: var(--tab-background-color);
+    color: var(--tab-color);
+    padding: 4px 8px;
+    border-top-left-radius: var(--border-radius);
+    border-top-right-radius: var(--border-radius);
+
+    &:active {
+      transform: scale(0.9);
+    }
+
+    &:focus, &:hover {
+      background-color: var(--tab-hover-background-color);
+      color: var(--tab-hover-color);
+    }
+
+    &-active {
+      border-bottom: 3px solid var(--tab-avtive-indicator-color);
+      background-color: var(--tab-active-background-color);
+      color: var(--tab-active-color);
+    }
+  }
+}
+
+input {
+  background-color: transparent;
+  &:focus {
+    background-color: var(--background-color) !important;
+  }
 }
