--- a/frontend/src/component/playlist-tree/playlist-tree.scss
+++ b/frontend/src/component/playlist-tree/playlist-tree.scss
@@ -34,6 +34,7 @@
 
       input[type='checkbox'] {
         cursor: pointer;
+        accent-color: var(--checkbox-checked-background-color);
       }
 
       .tree-group-count {
