--- a/frontend/src/scss/_common.scss
+++ b/frontend/src/scss/_common.scss
@@ -2,10 +2,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  color: var(--playlist-color);
-  background-color: transparent;
+  color: var(--icon-button-color);
+  background-color: var(--icon-button-background-color);
   border: none;
-  border-radius: 50%;
+  border-radius: var(--icon-button-border-radius);
   aspect-ratio: 1 / 1;
   cursor: pointer;
 
@@ -15,19 +15,28 @@
 
   &:focus,
   &:hover {
-    background-color: var(--tree-hover-background-color);
+    color: var(--icon-button-hover-color);
+    background-color: var(--icon-button-hover-background-color);
     border: none;
     outline: none;
   }
 }
 
 @mixin textButton {
-  background-color: #0081fa;
-  color: var(--text-color);
-  border: 1px solid var(--border-color);
+  border: 1px solid var(--text-button-border-color);
   font-size: 1.2rem;
-  border-radius: var(--border-radius);
+  border-radius: var(--text-button-border-radius);
   padding: 4px 12px;
+  background-color: var(--text-button-background-color);
+  color: var(--text-button-color);
+  &:focus,
+  &:hover {
+    background-color: var(--text-button-hover-background-color);
+    color: var(--text-button-hover-color);
+    border: none;
+    outline: none;
+  }
+
 }
 
 @mixin list {
