--- a/frontend/src/component/user-view/user-view.scss
+++ b/frontend/src/component/user-view/user-view.scss
@@ -120,7 +120,7 @@
         display: none;
       }
 
-      @media (max-width: 750px) {
+      @media (max-width: 980px) {
         &-table {
           display: flex;
           flex-flow: column;
@@ -140,6 +140,7 @@
 
         &-col-label {
           display: block;
+          padding: 4px;
         }
 
         &-col {
@@ -148,7 +149,8 @@
           gap: 4px;
 
           input {
-            border: 1px solid var(--table-border-color);
+            border-top: 1px solid var(--table-border-color) !important;
+            border-bottom: 1px solid var(--table-border-color) !important;
           }
         }
       }
