--- a/frontend/src/component/playlist-tree/playlist-tree.scss
+++ b/frontend/src/component/playlist-tree/playlist-tree.scss
@@ -1,7 +1,7 @@
 @use '../../scss/common';
 
 .playlist-tree {
-  font-size: 12px;
+  font-size: 1rem;
 
   .tree-expander {
     margin-right: 6px;
@@ -24,7 +24,7 @@
       display: flex;
       flex-flow: row;
       align-items: center;
-      height: 1.3em;
+      height: 1.3rem;
 
       .tree-group-header-content {
         display: flex;
@@ -49,7 +49,8 @@
         flex-flow: row;
         align-items: center;
         margin-left: 50px;
-        height: 1.3em;
+        height: 1.3rem;
+        gap: 3px;
 
         .tree-channel-tools {
           display: flex;
@@ -61,15 +62,15 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            height: 1em;
-            width: 1em;
+            height: 1.1rem;
+            width: 1.1rem;
             border-radius: var(--border-radius);
             background-color: var(--tool-button-background-color);
             color: var(--tool-button-color);
 
             svg {
-              width: 0.5em;
-              height: 0.5em;
+              width: 1rem;
+              height: 1rem;
             }
 
             &:hover {
@@ -87,8 +88,8 @@
         }
 
         .tree-channel-nr {
-          width: 20px;
-          font-size: 0.8em;
+          min-width: 2rem;
+          font-size: 1rem;
           margin-right: 8px;
           text-align: right;
           color: var(--tree-count-color);
