added web_Search config, download queue changed to FIFO

--- a/frontend/src/component/playlist-tree/playlist-tree.scss
+++ b/frontend/src/component/playlist-tree/playlist-tree.scss
@@ -26,6 +26,7 @@
       flex-flow: row;
       align-items: center;
       height: 1.3rem;
+      white-space: nowrap;
 
       .tree-group-header-content {
         display: flex;
