added download status, regexp search in Web-UI

--- a/frontend/src/component/file-download/file-download.scss
+++ b/frontend/src/component/file-download/file-download.scss
@@ -64,6 +64,13 @@
       }
     }
 
+    &__status {
+      max-height: 0.8rem;
+      padding: 0 4px;
+      svg {
+        transform: scale(0.7);
+      }
+    }
   }
 }
 
