--- a/frontend/src/scss/_theme.scss
+++ b/frontend/src/scss/_theme.scss
@@ -73,4 +73,7 @@
   --checkbox-background-color: #44475A;
   --checkbox-hover-background-color: #6272A4;
   --checkbox-checked-background-color: #6272A4;
+
+  --option-active-background-color: #50FA7B;
+  --option-active-color: #000;
 }
