--- a/frontend/src/component/main-config-view/main-config-view.scss
+++ b/frontend/src/component/main-config-view/main-config-view.scss
@@ -5,11 +5,15 @@
 
   @include preferences.prefsRoot();
   @include preferences.prefsToolbar();
-  @include preferences.prefsInput();
   @include preferences.prefsForm();
 
+  &__content-form {
+    display: flex;
+    flex-flow: column;
+  }
+
   &__content-help-img {
-    width: 300px;
+    max-width: 360px;
     height: auto;
     fill: currentColor;
   }
