--- a/frontend/src/scss/_theme.scss
+++ b/frontend/src/scss/_theme.scss
@@ -32,6 +32,7 @@
   --popup-hover-color: #fff;
 
   --attention-color: red;
+  --warn-color: orange;
 
   --card-background-color: #282A36;
   --card-color: #ffffff;
