--- a/frontend/src/component/tab-set/tab-set.scss
+++ b/frontend/src/component/tab-set/tab-set.scss
@@ -34,5 +34,9 @@
       background-color: var(--tab-active-background-color);
       color: var(--tab-active-color);
     }
+
+    &:focus-visible {
+      outline: none;
+    }
   }
 }
